<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/parse_login"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/com_parse_ui_username_input_hint"
        style="@style/ParseLoginUI.EditText"/>
    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:hint="@string/com_parse_ui_password_input_hint"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        style="@style/ParseLoginUI.EditText"/>
    <LinearLayout
        android:id="@+id/parse_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing">
        <Button
            android:id="@+id/parse_login_button"
            android:text="@string/com_parse_ui_parse_login_button_label"
            android:layout_weight="0.5"
            style="@style/ParseLoginUI.Button"/>
        <Button
            android:id="@+id/parse_signup_button"
            android:layout_marginLeft="@dimen/com_parse_ui_small_horizontal_spacing"
            android:text="@string/com_parse_ui_parse_signup_button_label"
            android:layout_weight="0.5"
            style="@style/ParseLoginUI.Button"/>
    </LinearLayout>
    <Button
        android:id="@+id/parse_login_help"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_marginBottom="@dimen/com_parse_ui_small_vertical_spacing"
        android:text="@string/com_parse_ui_forgot_password_button_label"
        style="@style/ParseLoginUI.HelpButton"/>
</LinearLayout>
