<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:gravity="center"
        android:id="@+id/login_help_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/com_parse_ui_login_help_instructions"
        style="@style/ParseLoginUI.TextView"/>
    <EditText
        android:id="@+id/login_help_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/com_parse_ui_xlarge_vertical_spacing"
        android:hint="@string/com_parse_ui_login_help_email_input_hint"
        android:inputType="textEmailAddress"
        style="@style/ParseLoginUI.EditText"/>
    <Button
        android:id="@+id/login_help_submit"
        android:layout_marginTop="@dimen/com_parse_ui_xlarge_vertical_spacing"
        android:text="@string/com_parse_ui_login_help_submit_button_label"
        style="@style/ParseLoginUI.Button"/>
</LinearLayout>
